welcome.lessons.welcome.bat.bool1.HasTeen.scala.error
hasTeen:2: error: ';' expected but ',' found.
	a,b,c match {
         ^